Implemented UUIDComparator, resolved last unit test failures (now back to 100% pass)

--- a/src/main/java/com/fasterxml/uuid/ext/package.html
+++ b/src/main/java/com/fasterxml/uuid/ext/package.html
@@ -1,13 +1,11 @@
 <body>
-Package that contains optional Jug classes; classes that either:
+Package that contains optional Java UUID Generator classes; classes that:
 <ul>
  <li>Depend on optional external packages; like log4j or java.util.logging -
-based Logger adapters.
-  </li>
- <li>Depend on JDK versions later than 1.1; for example file based timestamp
-synchronizer depends on NIO, and thus JDK 1.4+.
+based Logger adapters (java.util.logging itself was added in JDK 1.4)
   </li>
 </ul>
 <p>
-
+Otherwise base JDK version requirement for these classes is 1.4.
+</p>
 </body>
