--- a/src/main/java/com/fasterxml/uuid/package.html
+++ b/src/main/java/com/fasterxml/uuid/package.html
@@ -1,5 +1,5 @@
 <body>
-Package that contains core (non-optional) Java Uuid Generator classes.
+Package that contains core (non-optional) Java UUID Generator classes.
 These classes should be usable on JDK 1.4 and up, and have no external dependencies;
 except that any functionality that uses Ethernet-address discovery requires JDK 1.6.
 <p>
