--- a/src/main/java/com/fasterxml/uuid/package.html
+++ b/src/main/java/com/fasterxml/uuid/package.html
@@ -1,5 +1,6 @@
 <body>
-Package that contains core (non-optional) Java UUID Generator classes.
+Package that contains core (non-optional) Java UUID Generator API classes.
+Implmentation classes can be found from under {@link com.fasterxml.uuid.impl}.
 These classes should be usable on JDK 1.4 and up, and have no external dependencies;
 except that any functionality that uses Ethernet-address discovery requires JDK 1.6.
 <p>
