--- a/src/main/java/com/fasterxml/uuid/ext/package.html
+++ b/src/main/java/com/fasterxml/uuid/ext/package.html
@@ -2,10 +2,7 @@
 Package that contains optional Java UUID Generator classes; classes that:
 <ul>
  <li>Depend on optional external packages; like log4j or java.util.logging -
-based Logger adapters (java.util.logging itself was added in JDK 1.4)
+based Logger adapters
   </li>
 </ul>
-<p>
-Otherwise base JDK version requirement for these classes is 1.4.
-</p>
 </body>
